my second commit

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="jumbotron text-center">
       <img src="img/FOTO.jpg" alt="Azhar Maolana" width="200px" class="rounded-circle" class="img-thumbnail" />
       <h1 class="display-4">Azhar Maolana</h1>
-      <p class="lead">Junior Web Developer | Back-end Web Develover</p>
+      <p class="lead">Junior Web Developer</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
