--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
     <!-- Footer -->
     <footer class="bg-primary text text-white justify-content-center text-center pb-3">
-      <p>Created By Azhar maolana | 2022 &copy;</p>
+      <p>Created By Azhar maolana | 2022</p>
     </footer>
     <!-- Akhir Footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@2.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
