--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
             <h2>Contact Me</h2>
           </div>
         </div>
+        <!-- Sosmed -->
         <div class="row justify-content-center text-center md-2">
           <div class="col-md-2 mb-3">
             <i class="bi bi-whatsapp"><a href="https://wa.me/message/KSZEJCBRCPWFD1" style="text-decoration: none" class="text-dark" target="_blank"> Chat Me!!</a></i>
@@ -157,35 +158,12 @@
           <div class="col-md-2 mb-3">
             <i class="bi bi-twitter"><a href="https://twitter.com/azhrmaolana" style="text-decoration: none" class="text-dark" target="_blank">@azhrmaolana</a></i>
           </div>
-        </div>
-
-        <div class="row justify-content-center">
-          <div class="col-md-6">
-            <div class="mb-3">
-              <label for="name" class="form-label">Full Name</label>
-              <input type="Text" class="form-control" id="name" aria-describedby="name" />
-            </div>
-            <div class="mb-3">
-              <label for="email" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="email" aria-describedby="email" placeholder="name@example.com" />
-            </div>
-            <div class="mb-3">
-              <label for="comment" class="form-label">Comment</label>
-              <textarea class="form-control" id="comment" rows="3"></textarea>
-            </div>
-            <div class="col-auto">
-              <button type="submit" class="btn btn-primary mb-3">Submit</button>
-            </div>
+          <div class="col-md-2 mb-3">
+           <i class="bi bi-envelope"></i> azharmaolana007@gmail.com</i>
           </div>
         </div>
-      </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#0d6efd"
-          fill-opacity="1"
-          d="M0,288L40,277.3C80,267,160,245,240,197.3C320,149,400,75,480,69.3C560,64,640,128,720,144C800,160,880,128,960,138.7C1040,149,1120,203,1200,224C1280,245,1360,235,1400,229.3L1440,224L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
-        ></path>
-      </svg>
+        <!-- Akhir sosmed -->
+       
     </section>
     <!-- AKHIR Contact -->
 
