--- a/index.html
+++ b/index.html
@@ -69,12 +69,14 @@
         </div>
         <div class="row justify-content-center fs-2 text-center">
           <div class="col-md-4 mb-3">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora iure maxime nisi dolore temporibus ea alias atque commodi quasi asperiores? Illo modi adipisci accusamus soluta porro sapiente minus eveniet deleniti?</p>
+            <p class="fs-4">
+              I was born in 99, in Garut, West Java, Indonesia. I graduated from SMA Negeri 3 Garut and continued to study at Piksi Ganesha Polytechnic Bandung and majored in D3 Information Management, but I graduated one year late because I had things to do.
+            </p>
           </div>
           <div class="col-md-4 mb-3">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit aut repellat aperiam, nesciunt saepe exercitationem dignissimos, autem libero rerum distinctio neque optio consectetur modi dolores nemo sunt! Sunt, mollitia
-              impedit?
+            <p class=" fs-4">
+              I'm a junior web developer, I've studied it for about a year. and I learned several languages ​​related to web developers such as Html, CSS, bootstrap, PHP, and MySQL.
+              I am an honest, disciplined, and responsible person. I can also learn new things very well. below are examples of some of my projects that have not been released because they are only prototypes.
             </p>
           </div>
         </div>
@@ -159,11 +161,12 @@
             <i class="bi bi-twitter"><a href="https://twitter.com/azhrmaolana" style="text-decoration: none" class="text-dark" target="_blank">@azhrmaolana</a></i>
           </div>
           <div class="col-md-2 mb-3">
-           <i class="bi bi-envelope"></i> azharmaolana007@gmail.com</i>
+            <i class="bi bi-envelope"><a href="mailto: azharmaolana007@gmail.com" style="text-decoration: none" class="text-dark" target="_blank"> azharmaolana007@gmail.com</a></i>
           </div>
         </div>
+  
         <!-- Akhir sosmed -->
-       
+      
     </section>
     <!-- AKHIR Contact -->
 
