--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <img src="img/projects/php.jpg" class="card-img-top" alt="My Projects" />
               <div class="card-body">
                 <h5 class="card-title">My First PHP simple coding</h5>
-                <p class="card-text">This'is one of my projects, i used PHP on it and learn some stuff with it. and it's just prototype</p>
+                <p class="card-text">This is one of my projects, i used PHP on it and learn some stuff with it. It's prototype. And this is my first web developer.</p>
                 <a href="https://github.com/zhrmln/first-php-languages" class="btn btn-primary">Check the coding in my github</a>
               </div>
             </div>
@@ -115,7 +115,7 @@
               <img src="img/projects/mid.jpg" class="card-img-top" alt="My Projects" />
               <div class="card-body">
                 <h5 class="card-title">E-commerce web Prototype</h5>
-                <p class="card-text">This'is my 1 of my projects, i made this web without launching it, because this just a prototype.</p>
+                <p class="card-text">This is one of my projects, i made this web without launching it, because this web just a prototype.</p>
                 <a href="https://github.com/zhrmln/E-commerce-prototype" class="btn btn-primary">Check the coding in my github</a>
               </div>
             </div>
