--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- Icon bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" />
 
+    <!-- AOS Animation -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
 
@@ -46,7 +49,7 @@
 
     <!-- jumbotron   -->
     <section class="jumbotron text-center">
-      <img src="img/FOTO.jpg" alt="Azhar Maolana" width="200px" class="rounded-circle" class="img-thumbnail" />
+      <img src="img/FOTO.jpg" alt="Azhar Maolana" width="200px" class="rounded-circle" class="img-thumbnail" data-aos="flip-left" ata-aos-duration="3000" data-aos-delay="5000" />
       <h1 class="display-4">Azhar Maolana</h1>
       <p class="lead">Junior Web Developer</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -64,17 +67,17 @@
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
-            <h2>About Me</h2>
+            <h2 data-aos="fade-down" data-aos-duration="3000">About Me</h2>
           </div>
         </div>
         <div class="row justify-content-center fs-2 text-center">
           <div class="col-md-4 mb-3">
-            <p class="fs-4">
-              I was born in 99, in Garut, West Java, Indonesia. I graduated from SMA Negeri 3 Garut and continued to study at Piksi Ganesha Polytechnic Bandung and majored in D3 Information Management, but I graduated one year late because I had things to do.
+            <p class="fs-4" data-aos="fade-right" data-aos-duration="3000">
+              I was born in 99, in Garut, West Java, Indonesia. I graduated 2017 from SMA Negeri 3 Garut and continued to study at Piksi Ganesha Polytechnic Bandung and majored in D3 Information Management, but I graduated one year late because I had things to do.
             </p>
           </div>
           <div class="col-md-4 mb-3">
-            <p class=" fs-4">
+            <p class=" fs-4" data-aos="fade-left" data-aos-duration="3000" data-aos-delay="200">
               I'm a junior web developer, I've studied it for about a year. and I learned several languages ​​related to web developers such as Html, CSS, bootstrap, PHP, and MySQL.
               I am an honest, disciplined, and responsible person. I can also learn new things very well. below are examples of some of my projects that have not been released because they are only prototypes.
             </p>
@@ -96,12 +99,12 @@
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
-            <h2>My Projects</h2>
+            <h2 data-aos="flip-up" data-aos-duration="1000">My Projects</h2>
           </div>
         </div>
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
-            <div class="card" style="width: 18rem">
+            <div class="card" style="width: 18rem" data-aos="flip-left" data-aos-duration="2000">
               <img src="img/projects/php.jpg" class="card-img-top" alt="My Projects" />
               <div class="card-body">
                 <h5 class="card-title">My First PHP simple coding</h5>
@@ -111,7 +114,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card" style="width: 18rem">
+            <div class="card" style="width: 18rem" data-aos="flip-left" data-aos-duration="2000">
               <img src="img/projects/mid.jpg" class="card-img-top" alt="My Projects" />
               <div class="card-body">
                 <h5 class="card-title">E-commerce web Prototype</h5>
@@ -176,5 +179,9 @@
     </footer>
     <!-- Akhir Footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@2.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
