design logo contact

--- a/index.html
+++ b/index.html
@@ -135,36 +135,37 @@
         </div>
         <!-- Sosmed -->
         <div class="row justify-content-center text-center md-2">
+          <div  class="col-md-2 mb-3">
+            <i id="wa" class="bi bi-whatsapp" ><a href="https://wa.me/message/KSZEJCBRCPWFD1" style="text-decoration: none" class="text-light fst-normal" target="_blank">WhatsApp</a></i>
+          </div>
+          <div  class="col-md-2 mb-3">
+            <i id="fb" class="bi bi-facebook"><a href="https://web.facebook.com/sevenzhar" style="text-decoration: none" class="text-light fst-normal" target="_blank">Facebook</a></i>
+          </div>
+          
           <div class="col-md-2 mb-3">
-            <i class="bi bi-whatsapp"><a href="https://wa.me/message/KSZEJCBRCPWFD1" style="text-decoration: none" class="text-dark" target="_blank"> Chat Me!!</a></i>
+            <i id="in" class="bi bi-linkedin "><a  style="text-decoration: none " href="https://www.linkedin.com/in/azhar-maolana-b37ab221a/" class="text-LinkedIn fst-normal" target="_blank">LinkedIn</a></i>
           </div>
           <div class="col-md-2 mb-3">
-            <i class="bi bi-facebook"><a href="https://web.facebook.com/sevenzhar" style="text-decoration: none" class="text-dark" target="_blank"> Azhar Maolana</a></i>
+            <i class="bi bi-github text-dark"><a href="https://github.com/zhrmln" style="text-decoration: none" class="text-dark fst-normal" target="_blank">GitHub</a></i>
           </div>
           <div class="col-md-2 mb-3">
-            <i class="bi bi-instagram"><a style="text-decoration: none" href="https://www.instagram.com/maolana.azhar/" class="text-dark" target="_blank"> @maolana.azhar</a></i>
+            <i id="twitt"class="bi bi-twitter"><a href="https://twitter.com/azhrmaolana" style="text-decoration: none" class="text-twitt fst-normal" target="_blank">Twitter</a></i>
           </div>
+          <br>
+          <!-- Email akoeh -->
+        </div>
+        <div class="row justify-content-center text-center md-">
           <div class="col-md-2 mb-3">
-            <i class="bi bi-linkedin"><a style="text-decoration: none" href="https://www.linkedin.com/in/azhar-maolana-b37ab221a/" class="text-dark" target="_blank"> Azhar Maolana</a></i>
-          </div>
-          <div class="col-md-2 mb-3">
-            <i class="bi bi-github"><a href="https://github.com/zhrmln" style="text-decoration: none" class="text-dark" target="_blank"> zhrmln</a></i>
-          </div>
-          <div class="col-md-2 mb-3">
-            <i class="bi bi-twitter"><a href="https://twitter.com/azhrmaolana" style="text-decoration: none" class="text-dark" target="_blank">@azhrmaolana</a></i>
-          </div>
-          <div class="col-md-2 mb-3">
-            <i class="bi bi-envelope"><a href="mailto: azharmaolana007@gmail.com" style="text-decoration: none" class="text-dark" target="_blank"> azharmaolana007@gmail.com</a></i>
+            <i class="bi bi-envelope"><a href="mailto: azharmaolana007@gmail.com" style="text-decoration: none" class="text-dark fst-normal" target="_blank"> azharmaolana007@gmail.com</a></i>
           </div>
         </div>
-  
         <!-- Akhir sosmed -->
       
     </section>
     <!-- AKHIR Contact -->
 
     <!-- Footer -->
-    <footer class="bg-primary text text-white justify-content-center text-center pb-3">
+    <footer class="bg-primary text text-white justify-content-center text-center pb-3 ">
       <p>Created By Azhar maolana | 2022</p>
     </footer>
     <!-- Akhir Footer -->
