--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <section class="jumbotron text-center">
       <img src="img/FOTO.jpg" alt="Azhar Maolana" width="200px" class="rounded-circle" class="img-thumbnail" data-aos="flip-left" ata-aos-duration="3000" data-aos-delay="5000" />
       <h1 class="display-4">Azhar Maolana</h1>
-      <p class="lead">Junior Web Developer</p>
+      <p class="lead fst-italic">Junior Web Developer</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
@@ -133,25 +133,29 @@
         <div class="row text-center mb-3">
           <div class="col">
             <h2>Contact Me</h2>
-            <p>Just lets take a break and drink a coffe</p>
+            <p class="fst-italic">Let's take a break and drink a coffee, then talk about what you need...</p>
           </div>
         </div>
         <!-- Sosmed -->
-        <div id="sosmed" class="justify-content-center text-center md-2 mb-3">
-            <a href="https://wa.me/message/KSZEJCBRCPWFD1" style="text-decoration: none" class="text-light fst-normal" target="_blank" id="wa"><i class="bi bi-whatsapp"></i>WhatsApp</a>
-         &emsp;
-            <a href="https://web.facebook.com/sevenzhar" style="text-decoration: none" class="text-light fst-normal" target="_blank" id="fb"><i class="bi bi-facebook"></i>Facebook</a>
-         &emsp;
-            <a style="text-decoration: none" href="https://www.linkedin.com/in/azhar-maolana-b37ab221a/" class="text-LinkedIn fst-normal" target="_blank" id="in"><i class="bi bi-linkedin"></i>LinkedIn</a>
-          &emsp;
-            <a href="https://github.com/zhrmln" style="text-decoration: none" class="text-dark fst-normal" target="_blank"><i class="bi bi-github text-dark"></i>GitHub</a>
-          &emsp;          
-            <a href="https://twitter.com/azhrmaolana" style="text-decoration: none" class="text-twitt fst-normal" target="_blank" id="twitt"><i class="bi bi-twitter"></i>Twitter</a>
-          &emsp;
-          <!-- Email akoeh -->
-          
-            <a href="mailto: azharmaolana007@gmail.com" style="text-decoration: none" class="text-dark fst-normal" target="_blank"><i class="bi bi-envelope"></i>Send a mail</a>
-          
+        <div id="sosmed" class="row justify-content-center  mb-3">
+            <div class="col-md-3 justify-content-center text-center mb-3">
+    <a href="https://wa.me/message/KSZEJCBRCPWFD1" style="text-decoration: none" class="text-light fst-normal" target="_blank" id="wa"><i class="bi bi-whatsapp"></i>WhatsApp</a>
+</div>
+<div class="col-md-3 justify-content-center text-center mb-3">
+    <a href="https://web.facebook.com/sevenzhar" style="text-decoration: none" class="text-light fst-normal" target="_blank" id="fb"><i class="bi bi-facebook"></i>Facebook</a>
+</div>
+<div class="col-md-3 justify-content-center text-center mb-3">
+    <a style="text-decoration: none" href="https://www.linkedin.com/in/azhar-maolana-b37ab31a/" class="text-LinkedIn fst-normal" target="_blank" id="in"><i class="bi bi-linkedin"></i>LinkedIn</a>
+</div>
+<div class="col-md-3 justify-content-center text-center mb-3">
+    <a href="https://github.com/zhrmln" style="text-decoration: none" class="text-dark fst-normal" target="_blank"><i class="bi bi-github text-dark"></i>GitHub</a>
+</div>
+<div class="col-md-3 justify-content-center text-center mb-3">
+    <a href="https://twitter.com/azhrmaolana" style="text-decoration: none" class="text-twitt fst-normal" target="_blank" id="twitt"><i class="bi bi-twitter"></i>Twitter</a>
+</div>
+<div class="col-md-3 justify-content-center text-center mb-3">
+    <a href="mailto: azharmaolana007@gmail.com" style="text-decoration: none" class="text-dark fst-normal" target="_blank"><i class="bi bi-envelope"></i>Send a mail</a>
+</div>
         </div>
       </div>
       <!-- Akhir sosmed -->
@@ -160,12 +164,12 @@
 
     <!-- Footer -->
     <footer class="bg-primary text text-white justify-content-center text-center pb-3">
-      <p>Created By Azhar maolana | 2022</p>
+      <p>Created By <a href="https://www.instagram.com/maolana.azhar/" style="text-decoration: none" class="text-light"  target="_blank">Azhar Maolana</a> | 2022</p>
     </footer>
     <!-- Akhir Footer -->
 
     <!-- javascript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@2.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
